# RecSys

./: README.md  pyproject.toml
RecSys-Materials/Challenges/: EvaluateUserCF-Exploration.py  EvaluateUserCF-Outliers.py  RBMBakeOff.py
RecSys-Materials/CollaborativeFiltering/: EvaluateUserCF.py  KNNBakeOff.py  SimpleUserCF.py
RecSys-Materials/ContentBased/: ContentRecs.py
RecSys-Materials/DeepLearning/: AutoRecBakeOff.py  RBMBakeOff.py  RBMTuning.py
RecSys-Materials/Evaluating/: TestMetrics.py
RecSys-Materials/Framework/: RecsBakeOff.py
RecSys-Materials/GettingStarted/: GettingStarted.ipynb  MovieLens.py
RecSys-Materials/Hybrid/: HybridTest.py  RBMAlgorithm.py
RecSys-Materials/MatrixFactorization/: SVDBakeOff.py  SVDTuning.py
RecSys-Materials/ScalingUp/: SparkALS.py
notebooks/01-GettingStarted/: GettingStarted.ipynb
notebooks/03-Evaluating/: TestMetrics.ipynb
notebooks/04-Framework/: RecsBakeOff.ipynb
notebooks/05-ContentBased/: ContentRecs.ipynb  ContentRecs.py
notebooks/06-CollaborativeFiltering/: EvaluateUserCF.ipynb  EvaluateUserCF.py  KNNBakeOff.ipynb  SimpleItemCF.ipynb  SimpleItemCF.py  SimpleUserCF.ipynb  SimpleUserCF.py
notebooks/07-MatrixFactorization/: SVDBakeOff.ipynb  SVDTuning.ipynb
notebooks/08-DeepLearningIntro/: GAN_on_Fashion_MNIST.ipynb  Keras-CNN.ipynb  Keras-RNN.ipynb  Keras.ipynb  PandasTutorial.ipynb  PoliticsExercise.ipynb  Tensorflow.ipynb
notebooks/09-DeepLearning/: AutoRecBakeOff.ipynb  AutoRecBakeOff.py  EvaluatedAlgorithm.py  NeuralCollaborativeFiltering.ipynb  RBM.py  RBMAlgorithm.py  RBMBakeOff.ipynb  (+2 more)
(+41 files in other folders)
